@@ -1,0 +1,26 @@
+-- The Zephyr Abstract Syntax Description Language (ASDL)
+-- in the form of an ASDL description
+
+module ASDL {
+
+    field
+        = Option
+        | Seq
+        | Plus
+        | Id    -- try this one last, so others have a chance to match
+
+        attributes (identifier typeName, identifier? name)
+
+    constructor
+        = Constructor(identifier name, field* attributes)
+
+    typedef
+        = Sum(constructor+ types, field* attributes)
+        | Product(field+ attributes)
+
+        attributes (identifier name)
+
+    module -- some comments
+        = (identifier name, typedef+ definitions)
+}
+
